Allow wildcard CORS origins for deployment to arbitrary hosts
Switch to setAllowedOriginPatterns so a configurable origin list (or "*")
works alongside allowCredentials(true). Default to "*", overridable via
the APP_CORS_ALLOWED_ORIGINS env var for a strict list.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>